--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,8 +1,24 @@
 .app {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
     width: 100%;
     height: 100vh;
     background-color: #F9FAFF;
+}
+
+.inputBox {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 35px 0;
+
+    input {
+        width: 40%;
+        height: 35px;
+        padding-left: 25px;
+        border: 0;
+        box-shadow: 0px 1px 5px 3px rgba(101, 119, 133, 0.1);
+        outline: none;
+    }
 }
