--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -8,17 +8,36 @@
 }
 
 .inputBox {
+    position: relative;
     display: flex;
     justify-content: center;
-    width: 100%;
+    width: 40%;
     margin: 35px 0;
-
     input {
-        width: 40%;
+        width: 100%;
         height: 35px;
         padding-left: 25px;
         border: 0;
         box-shadow: 0px 1px 5px 3px rgba(101, 119, 133, 0.1);
         outline: none;
+    }
+
+    .clear {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        top: 25%;
+        right: 5rem;
+        background-color: rgba(120, 131, 187, 0.2);
+        border-radius: 50%;
+        height: 18px;
+        width: 18px;
+
+
+        img {
+            height: 14px;
+            cursor: pointer;
+        }
     }
 }
