--- a/src/components/Table/Datable.module.scss
+++ b/src/components/Table/Datable.module.scss
@@ -9,55 +9,11 @@
     display: flex;
     align-items: center;
     padding: 8px 0;
-    width: 100%;
+    width: 60%;
     background-color: #EAF2FF;
 
     img {
         margin: 0 20px 0 10px;
+        cursor: pointer;
     }
-}
-
-tr {
-    display: grid;
-    flex-direction: row;
-    align-items: center;
-    grid-template-columns: 1fr 1.5fr 3fr 0.8fr 1fr;
-    padding: 10px 0;
-    border-bottom: 1px solid rgba(102, 102, 102, 0.1);
-}
-
-.rightCell {
-    display: flex;
-    justify-content: flex-end;
-    margin-right: 1.5rem;
-}
-
-.gender {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 2px solid #fff;
-    border-radius: 50%;
-    box-shadow: 0px 3px 5px 1px rgba(34, 60, 80, 0.2);
-    height: 3.5em;
-    width: 3.5em;
-    padding: 10px;
-}
-.male {
-    background-color: rgba(139, 145, 221, 0.4);
-}
-.female {
-    background-color: rgba(246, 87, 110, 0.4);
-}
-
-.name, .phone {
-    margin: 8px 0;
-}
-
-.message {
-    color: #8B91DD;
-}
-
-.date {
-    color: #8E8E93;
 }
